# receipt-parser

./: .gitignore  NOTES.md  README.md  SUBMISSION_GUIDE.md  prompt_log.txt  pyproject.toml  scaffold.py  test_scaffold.py
demo/: output.txt  video_link.txt
