[project]
name = "ai-systems-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "dotenv>=0.9.9",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.3",
    "uvicorn>=0.23.0",
]
